Cleaned up result refactor for parser